Fix chnages for notifications

--- a/MultihostAdapter/MultihostAdapter/wwwroot/host/templates/host.profile.tmpl.html
+++ b/MultihostAdapter/MultihostAdapter/wwwroot/host/templates/host.profile.tmpl.html
@@ -31,15 +31,7 @@
             <div class="host-profile-bar-info-item">
                 <label class="host-profile-bar-info-item-title" style="margin:0;">Resume URL</label>
                 <label class="host-profile-bar-info-item-value"><a href="http://bing.com" target="_blank">XXXX XXX XXXXXXXXXX</a></label>
-            </div>
-            <div class="host-profile-bar-info-item w50">
-                <label class="host-profile-bar-info-item-title">Primary Tool</label>
-                <label class="host-profile-bar-info-item-value">XXXXXXX</label>
-            </div>
-            <div class="host-profile-bar-info-item w50">
-                <label class="host-profile-bar-info-item-title">Resource Type</label>
-                <label class="host-profile-bar-info-item-value">XXXXXXX</label>
-            </div>
+            </div>            
             <div class="host-profile-bar-info-item">
                 <label class="host-profile-bar-info-item-title">Standard Timezone</label>
                 <label class="host-profile-bar-info-item-value">XXXXXXX XXXXX XXXXXXX</label>
@@ -47,17 +39,13 @@
             <div class="host-profile-bar-info-item w50">
                 <label class="host-profile-bar-info-item-title">Skills</label>
                 <label class="host-profile-bar-info-item-value">XX</label>
-            </div>
-            <div class="host-profile-bar-info-item w50">
-                <label class="host-profile-bar-info-item-title">Accreditions</label>
-                <label class="host-profile-bar-info-item-value">XX</label>
-            </div>
+            </div>            
             <div class="host-profile-bar-info-item w50">
                 <label class="host-profile-bar-info-item-title">Certifications</label>
                 <label class="host-profile-bar-info-item-value">XX</label>
             </div>
             <div class="host-profile-bar-info-item">
-                <label class="host-profile-bar-info-item-title">Weekly Shift Plan</label>
+                <label class="host-profile-bar-info-item-title">Weekly Off</label>
                 <md-chips>
                     <md-chip>SUN</md-chip>
                     <md-chip>MON</md-chip>
